# kube-chaos-lab

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: prerequisites.md
infra/base/: kustomization.yaml
infra/base/apps/: kustomization.yaml
infra/base/apps/adm-stg/: kustomization.yaml
infra/base/apps/adm-stg/whoami/: configmap.yaml  deployment.yaml  kustomization.yaml
infra/base/apps/dev-stg/: kustomization.yaml
infra/base/apps/dev-stg/hello/: configmap.yaml  deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
infra/base/apps/ops-stg/: kustomization.yaml
infra/base/apps/ops-stg/toolbox/: kustomization.yaml  pod.yaml
infra/base/namespaces/: kustomization.yaml  ns-adm-prd.yaml  ns-adm-stg.yaml  ns-dev-prd.yaml  ns-dev-stg.yaml  ns-devops-prd.yaml  ns-devops-stg.yaml  ns-legacy.yaml  ns-ops-prd.yaml  ns-ops-stg.yaml
infra/base/platform/: kustomization.yaml  patch-node-port.yaml  patch-remove-ingress-ready.yaml  rbac-controller.yaml
infra/kind/: cluster.yaml
tests/: test_cli_smoke.py  test_repo_structure.py
tools/labctl/: cli.py  config.py  doctor.py  kube.py  start.py  wait.py
